--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
         ];
         
         // Destination URL for all redirects
-        // const destinationURL = "https://www.mybpfix.com/video_drugs_stk_prod_dr_nhc_mon?affId=roi&c1=w9rlupajqi0kr94a3mujfies&sid=Perform%20Media&utm_medium=cpc&utm_source=roi&utm_campaign=Perform%20Media&utm_content=Perform%20Media&utm_term=Perform%20Media&txid=";
-        const destinationURL = "file:///Users/tizil.s/test/serp/index.html";
+        const destinationURL = "https://www.mybpfix.com/video_drugs_stk_prod_dr_nhc_mon?affId=roi&c1=w9rlupajqi0kr94a3mujfies&sid=Perform%20Media&utm_medium=cpc&utm_source=roi&utm_campaign=Perform%20Media&utm_content=Perform%20Media&utm_term=Perform%20Media&txid=";
+        //const destinationURL = "file:///Users/tizil.s/test/serp/index.html";
         
         let currentStory = 0;
         let animationFrameIds = Array(videos.length).fill(null);
