--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="video-container">
                 <!-- Video element -->
                 <video id="video1" preload="auto" muted playsinline>
-                    <source src="http://34.49.149.149/Blood%20Pressure_1.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/bucket-quickstart_prismatic-iris-460406-g5/Blood%20Pressure_1.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <button class="cta-button">Learn More</button>
@@ -211,7 +211,7 @@
                 <!-- Video element -->
                 <video id="video2" preload="auto" muted playsinline>
                     <!-- Replace with your second video URL -->
-                    <source src="http://34.49.149.149/Blood%20Pressure_2.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/bucket-quickstart_prismatic-iris-460406-g5/Blood%20Pressure_2.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <button class="cta-button">Learn More</button>
@@ -223,7 +223,7 @@
                 <!-- Video element -->
                 <video id="video3" preload="auto" muted playsinline>
                     <!-- Replace with your third video URL -->
-                    <source src="http://34.49.149.149/Blood%20Pressure_3.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/bucket-quickstart_prismatic-iris-460406-g5/Blood%20Pressure_3.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <button class="cta-button">Learn More</button>
