--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
         .story.active {
             opacity: 1;
-            z-index: 2;
+f            z-index: 2;
             display: block;
         }
         
@@ -402,7 +402,7 @@
             video {
                 width: 100vw;
                 height: 100vh;
-                object-fit: fill; /* contain */
+                object-fit: contain; /* contain */
                 background-color: #000;
                 position: relative;
                 top: 0;
