--- a/index.html
+++ b/index.html
@@ -314,6 +314,43 @@
                 z-index: 2;
             }
         }
+
+        /* Review Text Block */
+        .review-block {
+            position: absolute;
+            bottom: 60px; /* Position above the CTA button */
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.7);
+            /* backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px); */
+            padding: 12px 20px;
+            border-radius: 8px;
+            color: white;
+            font-size: 16px;
+            text-align: center;
+            z-index: 5;
+            width: 80%;
+            max-width: 300px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .review-text {
+            margin-bottom: 5px;
+            font-weight: 500;
+        }
+
+        .stars {
+            color: #FFD700;
+            font-size: 18px;
+            letter-spacing: 2px;
+            margin-bottom: 5px;
+        }
+
+        .rating-count {
+            font-size: 14px;
+            color: rgba(255, 255, 255, 0.8);
+        }
     </style>
 </head>
 <body>
@@ -338,6 +375,11 @@
                     <source src="https://staticvideoshost.online/Blood%20Pressure_1.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <div class="review-block">
+                    <div class="review-text">I lost my dad to high blood pressure — my solution could help you protect your loved ones.</div>
+                    <div class="stars">★★★★☆</div>
+                    <div class="rating-count">(3948)</div>
+                </div>
                 <button class="cta-button">Learn More</button>
             </div>
         </div>
@@ -349,6 +391,11 @@
                     <source src="https://staticvideoshost.online/Blood%20Pressure_2.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <div class="review-block">
+                    <div class="review-text">I lost my dad to high blood pressure — my solution could help you protect your loved ones.</div>
+                    <div class="stars">★★★★☆</div>
+                    <div class="rating-count">(3948)</div>
+                </div>
                 <button class="cta-button">Learn More</button>
             </div>
         </div>
@@ -360,6 +407,11 @@
                     <source src="https://staticvideoshost.online/Blood%20Pressure_5.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <div class="review-block">
+                    <div class="review-text">I lost my dad to high blood pressure — my solution could help you protect your loved ones.</div>
+                    <div class="stars">★★★★☆</div>
+                    <div class="rating-count">(3948)</div>
+                </div>
                 <button class="cta-button">Learn More</button>
             </div>
         </div>
