--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         /* Review Text Block */
         .review-block {
             position: absolute;
-            bottom: 60px; /* Position above the CTA button */
+            bottom: 20px; /* Position above the CTA button */
             left: 50%;
             transform: translateX(-50%);
             background: rgba(0, 0, 0, 0.7);
@@ -392,7 +392,7 @@
                     Your browser does not support the video tag.
                 </video>
                 <div class="review-block">
-                    <div class="review-text">I lost my dad to high blood pressure — my solution could help you protect your loved ones.</div>
+                    <div class="review-text">The underlying problem can be corrected with a simple solution. </div>
                     <div class="stars">★★★★☆</div>
                     <div class="rating-count">(3948)</div>
                 </div>
@@ -408,7 +408,7 @@
                     Your browser does not support the video tag.
                 </video>
                 <div class="review-block">
-                    <div class="review-text">I lost my dad to high blood pressure — my solution could help you protect your loved ones.</div>
+                    <div class="review-text">Hypertension can be cured without drugs.</div>
                     <div class="stars">★★★★☆</div>
                     <div class="rating-count">(3948)</div>
                 </div>
