--- a/index.html
+++ b/index.html
@@ -413,14 +413,14 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
     animation: overlayHeartbeatPulse 1.5s infinite;
 }
 
-/* Ad title footer styles */
-.ad-title-footer {
+/*  Ad title footer styles */
+/* .ad-title-footer {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 20px;
+    bottom: 30px;
     width: 100%;
-    padding: 18px 10px 18px 10px;
+    padding: 10px 10px 10px 10px;
     background: rgba(0,0,0,0.7);
     color: #fff;
     font-size: 20px;
@@ -435,7 +435,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
 
 .video-wrapper {
     position: relative;
-}
+}  */
 </style>
 <script>
     function getUrlParameter(name) {
@@ -532,10 +532,10 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             <div class="video-wrapper">
                 <!-- Video element -->
                 <video id="videoElementOne" class="video-element" preload="auto" muted playsinline>
-                    <source src="https://staticvideoshost.online/Blood%20Pressure_8.mp4" type="video/mp4">
+                    <source src="https://staticvideoshost.online/Blood%20Pressure_6.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <div class="ad-title-footer">Hypertension can be cured without drugs. ⭐⭐⭐⭐ (3081)</div>
+                <!-- <div class="ad-title-footer">Hypertension can be cured without drugs. ⭐⭐⭐⭐ (3081)</div> -->
                 <button class="primary-cta-button">Learn More</button>
             </div>
         </div>
