--- a/index.html
+++ b/index.html
@@ -414,6 +414,11 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
 }
 
 
+.final-overlay-description .red-text {
+    color: #ff3b3b;
+    font-weight: bold;
+}
+
 </style>
 <script>
     function getUrlParameter(name) {
@@ -510,7 +515,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             <div class="video-wrapper">
                 <!-- Video element -->
                 <video id="videoElementOne" class="video-element" preload="auto" muted playsinline>
-                    <source src="https://staticvideoshost.online/Blood%20Pressure_6.mp4" type="video/mp4">
+                    <source src="https://staticvideoshost.online/Blood%20Pressure_10.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <button class="primary-cta-button">Learn More</button>
@@ -525,11 +530,11 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
                 Hello, I'm Dr. Marlene Merritt
             </div>
             <div class="final-overlay-description">
-                The underlying problem can be corrected with a simple solution.
+                The underlying problem of <span class="red-text">HIGH BLOOD PRESSURE</span> can be corrected with a simple solution
             </div>
              <a href="<ad_href_url:1 />" target="_blank" class="main-anchor mobileAnchor">
               <button class="final-overlay-cta-button">
-                  Get Your Solution Now → 
+                  Lower It Today → 
               </button>
             </a>
         </div>
