--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
                     <source src="https://staticvideoshost.online/Blood%20Pressure_10.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <button class="primary-cta-button">Learn More</button>
+                <button class="primary-cta-button">Watch Full Video → </button>
             </div>
         </div>
     </div>
@@ -534,7 +534,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             </div>
              <a href="<ad_href_url:1 />" target="_blank" class="main-anchor mobileAnchor">
               <button class="final-overlay-cta-button">
-                  Lower It Today → 
+                  Continue Watching → 
               </button>
             </a>
         </div>
