--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             padding: 12px 30px;
             font-size: 16px;
             z-index: 100;
-            background-color: rgba(222, 68, 16, 0.85);
+            background-color: rgba(49, 104, 52, 0.85);
             color: rgb(255, 255, 255);
             font-weight: bold;
             border-radius: 30px;
@@ -265,7 +265,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             justify-content: center;
             align-items: center;
             opacity: 0;
-            transform: translateY(100%);
+            transform: translateX(-100%);
             transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1), transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
             z-index: 25;
             padding: 20px;
@@ -276,7 +276,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
 
         .final-overlay-screen.is-active {
             opacity: 1;
-            transform: translateY(0);
+            transform: translateX(0);
             z-index: 25;
             pointer-events: auto;
         }
@@ -284,13 +284,13 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
         .final-overlay-content {
             max-width: 80%;
             padding: 0;
-            transform: translateY(30px);
+            transform: translateX(-30px);
             opacity: 0;
             transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1) 0.2s, opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1) 0.2s;
         }
 
         .final-overlay-screen.is-active .final-overlay-content {
-            transform: translateY(0);
+            transform: translateX(0);
             opacity: 1;
         }
 
@@ -312,7 +312,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
         }
 
         .final-overlay-cta-button {
-            background-color: rgba(222, 68, 16, 0.85);
+            background-color: rgba(49, 104, 52, 0.85);
             color: white;
             font-weight: bold;
             padding: 15px 40px;
@@ -395,6 +395,14 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
         }
  }
 
+ @keyframes fadePulse {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.8;
+    }
+}
 @keyframes overlayHeartbeatPulse {
     0%, 100% {
         transform: scale(1);
@@ -406,18 +414,21 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
         transform: scale(1.02);
     }
 }
+@keyframes rotatePulse {
+    0%, 100% {
+        transform: rotate(0deg) scale(1);
+    }
+    50% {
+        transform: rotate(2deg) scale(1.02);
+    }
+}
 
 .final-overlay-title,
 .final-overlay-description,
 .final-overlay-cta-button {
-    animation: overlayHeartbeatPulse 1.5s infinite;
+    animation: fadePulse 1.5s infinite;
 }
 
-
-.final-overlay-description .red-text {
-    color: #ff3b3b;
-    font-weight: bold;
-}
 
 </style>
 <script>
@@ -515,10 +526,10 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             <div class="video-wrapper">
                 <!-- Video element -->
                 <video id="videoElementOne" class="video-element" preload="auto" muted playsinline>
-                    <source src="https://staticvideoshost.online/Blood%20Pressure_10.mp4" type="video/mp4">
+                    <source src="https://staticvideoshost.online/LifetimeValue_1.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <button class="primary-cta-button">Watch Full Video → </button>
+                <button class="primary-cta-button"> Search Now → </button>
             </div>
         </div>
     </div>
@@ -527,14 +538,14 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
     <div class="final-overlay-screen" id="finalOverlayScreen">
         <div class="final-overlay-content">
             <div class="final-overlay-title">
-                Hello, I'm Dr. Marlene Merritt
+                Search Obituaries by Name
             </div>
             <div class="final-overlay-description">
-                The underlying problem of <span class="red-text">HIGH BLOOD PRESSURE</span> can be corrected with a simple solution
+                Our platform makes locating people's obituaries easier than ever, whether your search is personal or professional
             </div>
              <a href="<ad_href_url:1 />" target="_blank" class="main-anchor mobileAnchor">
               <button class="final-overlay-cta-button">
-                  Continue Watching → 
+                Start Your Search Now →
               </button>
             </a>
         </div>
