--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <stl_head>
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KGWFTNZ0YH"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SHG0LJ9PR0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KGWFTNZ0YH');
-</script> 
+  gtag('config', 'G-SHG0LJ9PR0');
+</script>
 
 <script language="JavaScript" type="text/javascript" src="<tag:jssource />"></script>
 <title><tag:domain_name /></title>
@@ -592,8 +592,14 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
                 <div class="loading-container" id="loadingContainer">
                     <div class="loading-spinner"></div>
                     <div class="loader-message">
-                        <p>Just a moment... Your personalized content is loading.</p>
-                        <p>This one's picked just for you—totally worth the wait!</p>
+                        <!-- <p>Just a moment... Your personalized content is loading.</p>
+                        <p>This one's picked just for you—totally worth the wait!</p> -->
+
+                        <p>Thank you for clicking — this content is crafted with you in mind.</p>
+                        <p>Loading something meaningful… just a moment.</p>
+
+                        <!-- <p> Bringing your personalized content to the screen... </p>
+                        <p> Thanks for your patience — it’s almost here.</p> -->
                     </div>
                 </div>
 
