--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
 
                 
                 <!-- Video element -->
-                <video id="videoElementOne" class="video-element" preload="auto" muted playsinline>
+                <video id="videoElementOne" class="video-element" preload="auto" muted playsinline autoplay>
                     <source src="https://staticvideoshost.online/LifetimeValue_4.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
