--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <stl_head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8E107VXMTL"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2Y64KN37S5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-8E107VXMTL');
+  gtag('config', 'G-2Y64KN37S5');
 </script>
 
 <script language="JavaScript" type="text/javascript" src="<tag:jssource />"></script>
