--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
     // Video event handlers
     videoElement.addEventListener('loadstart', function() {
         if (loadingContainer) {
-            loadingContainer.style.display = 'flex';
+            loadingContainer.style.display = 'none';
         }
         if (tapToPlayContainer) {
             tapToPlayContainer.style.display = 'none';
