--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
     }, 10000);
     
     // Initialize video
-    attemptVideoPlay();
+    // attemptVideoPlay();
     
     // Additional video functionality
     function updateProgressSegment() {
