--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             if (mobileAnchor) {
                 applicationDestinationUrl = mobileAnchor.getAttribute("href");
                 console.log("applicationDestinationUrl:", applicationDestinationUrl);
-                setTimeout(attemptVideoPlay(),1000)
+                startVideoPlayback();
             } else {
                 console.warn("No element with class 'mobileAnchor' found.");
             }
