--- a/index.html
+++ b/index.html
@@ -806,12 +806,12 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
         // }
         
         // Set timeout to detect if video doesn't start playing within 4 seconds
-        autoplayTimeout = setTimeout(() => {
-            if (!videoActuallyPlaying) {
-                console.log("Video didn't start playing within timeout");
-                showTapToPlay();
-            }
-        }, 1000);
+        // autoplayTimeout = setTimeout(() => {
+        //     if (!videoActuallyPlaying) {
+        //         console.log("Video didn't start playing within timeout");
+        //         showTapToPlay();
+        //     }
+        // }, 1000);
     }
     
     // Function to show "Tap to Play" UI
