--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             padding: 12px 30px;
             font-size: 16px;
             z-index: 100;
-            background-color: rgba(49, 104, 52, 0.85);
+            background-color: #003454;
             color: rgb(255, 255, 255);
             font-weight: bold;
             border-radius: 30px;
@@ -315,7 +315,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
         }
 
         .final-overlay-cta-button {
-            background-color: rgba(49, 104, 52, 0.85);
+            background-color: #003454;
             color: white;
             font-weight: bold;
             padding: 15px 40px;
@@ -493,7 +493,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
     align-items: center;
     gap: 20px;
     z-index: 3;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.6);
     padding: 30px;
     border-radius: 15px;
     backdrop-filter: blur(10px);
@@ -698,7 +698,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
                     <source src="https://staticvideoshost.online/ETFs_Funds_Stocks_1.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <button class="primary-cta-button"> Search Now → </button>
+                <button class="primary-cta-button"> Take the Quiz → </button>
             </div>
         </div>
     </div>
@@ -707,14 +707,14 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
     <div class="final-overlay-screen" id="finalOverlayScreen">
         <div class="final-overlay-content">
             <div class="final-overlay-title">
-                Search Obituaries by Name
+                SmartAsset
             </div>
             <div class="final-overlay-description">
-                Our platform makes locating people's obituaries easier than ever, whether your search is personal or professional
+                The Right Funds, The Right Plan | Starting With a Free Match
             </div>
              <a href="<ad_href_url:1 />" target="_blank" class="main-anchor mobileAnchor">
               <button class="final-overlay-cta-button">
-                Start Your Search Now →
+                Take the Quiz →
               </button>
             </a>
         </div>
@@ -765,7 +765,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
     let finalScreenShownTime = null;
     
     // Campaign tracking variable
-    const campaign = 'lifetime_value_video_campaign';
+    const campaign = 'ETFs_Funds_Stocks_campaign';
     
     // Autoplay detection variables
     let autoplayTimeout;
