--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
                 
                 <!-- Video element -->
                 <video id="videoElementOne" class="video-element" preload="auto" playsinline autoplay muted>
-                    <source src="https://staticvideoshost.online/Rexulti%20ADD_3.mp4" type="video/mp4">
+                    <source src="https://staticvideoshost.online/Rexulti%20AAD_3.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <button class="primary-cta-button"> Take the Questionnaire → </button>
