--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             bottom: 5%; /* Percentage-based positioning */
             left: 50%;
             transform: translateX(-50%);
-            padding: 12px 30px;
+            padding: 16px 32px;
             font-size: 16px;
             z-index: 100;
             background-color: rgba(49, 104, 52, 0.85);
@@ -225,9 +225,9 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
             border: none;
             outline: none;
             /* Responsive font size */
-            font-size: clamp(14px, 3vw, 18px);
+/*             font-size: clamp(14px, 3vw, 18px); */
             /* Responsive padding */
-            padding: clamp(10px, 2vw, 15px) clamp(20px, 4vw, 35px);
+/*             padding: clamp(10px, 2vw, 15px) clamp(20px, 4vw, 35px); */
 
             /* change for cta button  */
             display: none; /* Hide button initially */
