--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ li .content .arrow_wrap_inner .arrow_text.nxt{display: block;}
         
         .final-overlay-swipe-hint {
             position: absolute;
-            bottom: 30px;
+            top: 30px;
             left: 50%;
             transform: translateX(-50%);
             color: rgba(255, 255, 255, 0.8);
